# mini-tools

./: .gitignore  .npmrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: build-all.yml  release-estrattore-fatture.yml
apps/ai-aziendale-locale/: index.html  package.json  vite.config.ts
apps/ai-aziendale-locale/src/: App.tsx
apps/ai-aziendale-locale/src-tauri/: Cargo.toml  tauri.conf.json
apps/ai-aziendale-locale/src-tauri/capabilities/: default.json
apps/ai-aziendale-locale/src-tauri/icons/: icon.icns
apps/ai-aziendale-locale/src-tauri/src/: lib.rs  main.rs
apps/ai-aziendale-locale/src/lib/: db.ts  (+3 more)
apps/catalogo-generator/: index.html  package.json  vite.config.ts
apps/catalogo-generator/src/: App.tsx
apps/catalogo-generator/src-tauri/: Cargo.toml  tauri.conf.json
apps/estrattore-fatture/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/estrattore-fatture/src/: App.tsx
apps/estrattore-fatture/src-tauri/: Cargo.toml  tauri.conf.json
apps/excel-auditor/: index.html  package.json  vite.config.ts
apps/excel-auditor/src/: App.tsx
apps/excel-auditor/src-tauri/: Cargo.toml  tauri.conf.json
apps/generatore-documenti/: index.html  package.json  vite.config.ts
apps/generatore-documenti/src/: App.tsx
apps/generatore-documenti/src-tauri/: Cargo.toml  tauri.conf.json
apps/licensing-backend/: .env.example  README.md  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/licensing-backend/scripts/: keygen.ts
apps/pdf-toolkit-pro/: index.html  package.json  vite.config.ts
apps/pdf-toolkit-pro/src/: App.tsx
apps/pdf-toolkit-pro/src-tauri/: Cargo.toml  tauri.conf.json
apps/pulitore-anagrafiche/: index.html  package.json  vite.config.ts
apps/pulitore-anagrafiche/src/: App.tsx
apps/pulitore-anagrafiche/src-tauri/: Cargo.toml  tauri.conf.json
apps/riconciliazione-bancaria/: index.html  package.json  vite.config.ts
apps/riconciliazione-bancaria/src/: App.tsx
apps/riconciliazione-bancaria/src-tauri/: Cargo.toml  tauri.conf.json
apps/scadenziario-fiscale/: index.html  package.json  vite.config.ts
apps/scadenziario-fiscale/src/: App.tsx
apps/scadenziario-fiscale/src-tauri/: Cargo.toml  tauri.conf.json
apps/scadenziario-fiscale/src-tauri/capabilities/: default.json
apps/scadenziario-fiscale/src-tauri/icons/: icon.icns
apps/scadenziario-fiscale/src-tauri/src/: lib.rs  main.rs
apps/validatore-anagrafiche/: index.html  package.json  vite.config.ts
apps/validatore-anagrafiche/src/: App.tsx  main.tsx
apps/validatore-anagrafiche/src-tauri/: Cargo.toml  tauri.conf.json
crates/license-verify/: Cargo.toml  public-key.pem
crates/license-verify/src/: lib.rs
crates/machine-id/: Cargo.toml
crates/machine-id/src/: lib.rs
crates/tauri-license-plugin/: Cargo.toml
crates/tauri-license-plugin/src/: lib.rs
docs/: building.md  code-signing.md  signing.md  testing.md
scripts/: build-all-windows.ps1  gen-fixtures.ts  gen-icons.ts
test-fixtures/: README.md  anagrafiche-clienti.xlsx  anagrafiche-da-crm.xlsx  catalogo-prodotti.xlsx  estratto-conto-marzo.xlsx  excel-da-auditare.xlsx  fattura-acme-2026-0042.xml  fattura-gamma-2026-0099.xml  fatture-marzo.xlsx
test-fixtures/kb-demo/: ferie-permessi.md  linee-guida-acquisti.txt  procedura-rimborsi.md
(+99 files in other folders)
