[workspace]
resolver = "2"
members = [
    "crates/license-verify",
    "crates/machine-id",
    "crates/tauri-license-plugin",
    "apps/estrattore-fatture/src-tauri",
    "apps/validatore-anagrafiche/src-tauri",
    "apps/pulitore-anagrafiche/src-tauri",
    "apps/generatore-documenti/src-tauri",
    "apps/pdf-toolkit-pro/src-tauri",
    "apps/scadenziario-fiscale/src-tauri",
    "apps/riconciliazione-bancaria/src-tauri",
    "apps/excel-auditor/src-tauri",
    "apps/catalogo-generator/src-tauri",
    "apps/ai-aziendale-locale/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Drilon Hametaj <drilonhametaj25@gmail.com>"]
license = "Proprietary"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
jsonwebtoken = "9.3"
machine-uid = "0.5"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
