[package]
name = "license-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Verifica offline dei JWT licenza Da Excel a Software"

[dependencies]
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
