[package]
name = "tauri-license-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Plugin Tauri 2 per attivazione/heartbeat licenze Da Excel a Software"

[dependencies]
license-verify = { path = "../license-verify" }
machine-id = { path = "../machine-id" }
tauri = { version = "2.0", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
