[package]
name = "scadenziario-fiscale"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "scadenziario_fiscale_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-license-plugin = { path = "../../../crates/tauri-license-plugin" }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
